# potent

./: .gitignore  CHANGELOG.md  LICENSE  README.md  example.plan.json  justfile  mise.toml  pyproject.toml  schema.json  tox.ini
_meta/: command.py.tmpl  directive.py.tmpl  dump_schema.py  operation.py.tmpl  update_docs.py
src/potent/: __init__.py  cli.py  plan.py  shellprint.py  util.py
src/potent/commands/: _types.py  describe.py  dump_schema.py  info.py  init.py  reset.py  run.py  schema.py  status.py  summarize.py  validate.py
src/potent/directives/: _base.py  clean_workdir.py  create_pr.py  enable_automerge.py  git_add.py  git_commit.py  git_pull.py  git_push.py  git_status.py  git_switch.py  raw_command.py  switch_branch.py
src/potent/operations/: _base.py  create_pr.py  enable_automerge.py  git_add.py  git_commit.py  git_pull.py  git_push.py  git_status.py  git_switch.py  manual_confirmation.py  raw_command.py
src/shellprints/: __init__.py  shellprint.py  util.py
src/shellprints/commands/: dump_schema.py  reset.py  run.py  validate.py
src/shellprints/directives/: _base.py  clean_status.py  clean_workdir.py  git_checkout.py  git_pull.py  switch_branch.py  use_branch.py
tests/: test_cli.py  test_directives.py  test_operations.py  test_parsing.py  test_plan.py  test_types.py  test_util.py
