[project]
name = "potent"
version = "0.2.1"
description = "An idempotent way to run shell scripts."
readme = "README.md"
authors = [{ name = "David Brownman", email = "oss@xavd.id" }]
# https://endoflife.date/python
# but also there's some typing stuff I don't want to backport
requires-python = ">=3.12"
dependencies = ["pydantic ~= 2.12", "rich", "typer == 0.20.0"]
license-files = ["LICENSE"]
keywords = ["automation", "shell-scripting", "idempotency", "CLI tool"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development",
    "Topic :: System :: Shells",
    "Topic :: Utilities",
]

[project.urls]
Repository = "https://github.com/xavdid/potent"
Issues = "https://github.com/xavdid/potent/issues"
Changelog = "https://github.com/xavdid/potent/blob/main/CHANGELOG.md"

[project.scripts]
potent = "potent.cli:main"

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"

[tool.ruff.lint]
select = [
    "E",    # PEP8 recommendations
    "F",    # bugs
    "I001", # import sorting
    "BLE",  # catching root Exception
    "A",    # built-in shadowing
    "C4",   # unnecessary comprehensions
    "ISC",  # implicit string concat
    "PIE",  # misc useful lints
    "Q",    # better quoting behavior
    "RSE",  # no parens on exceptions that lack args
    "RET",  # more correct return behavior
    "SIM",  # general style things
    "TC",   # type-only imports should be in a typecheck block
    "ARG",  # unused args
    "PTH",  # use pathlib
    "FLY",  # short "".join calls
    "PERF", # performance hints
    "PL",   # pylint, general recommendations
    # "RUF", # these are a little picky for me
]

ignore = [
    "E501",    # skip enforcing line length
    "E741",    # ignore short variable names
    "PLR2004", # magic values
    "PLR0911", # too many returns
    "PLR0912", # too many branches
    "PLR0913", # too many arguments
    'Q000',    # single quotes; handled by formatter
]

unfixable = [
    "F401", # don't remove unused imports
    "F841", # don't remove unused variables
]

[dependency-groups]
dev = ["pytest >= 8.4.2", "ruff == 0.13.3", "tox>=4.32.0", "tox-uv>=1.29.0"]
